# project_information_security

./: README.md  pyproject.toml
examples/: run_pipeline.py  show_pipeline_result.py  show_rich_dashboard.py
src/: main.py
src/security-dashboard-ui/: index.html  package-lock.json  package.json
src/security-dashboard-ui/src/: App.jsx
src/security_dashboard/: __init__.py  automation.py  dashboard.py  incidents.py  ingestion.py  models.py  pretty.py  reporting.py  rules.py
src/security_dashboard.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: conftest.py  test_pipeline.py
